apps/hass/hass/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  namespace: hass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: hass
          image: ghcr.io/home-operations/home-assistant:2026.9.4@sha256:cd5ffc0a3bc873b35f20189ef22ee7ee9e8875fe666928dfee263cd464cc053d
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          volumeMounts:
            - name: hass-data
              mountPath: /config
          resources:
            requests:
              memory: 420Mi
              cpu: "15m"
            limits:
              memory: 700Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: hass-data
          persistentVolumeClaim:
            claimName: hass-pvc
